--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
 		"menus": {
 			"view/item/context": [
 				{
-					"when": "viewItem == YOUR_CONTEXT",
-					"command": "dotnet-solution-explorer.helloWorld",
-					"group": "YourGroup@1"
+					"when": "viewItem == dotnet-solution-explorer.razor",
+					"command": "dotnet-solution-explorer.helloWorld"
 				}
 			]
 		}
