--- a/package.json
+++ b/package.json
@@ -60,20 +60,23 @@
 			"view/item/context": [
 				{
 					"when": "viewItem == dotnet-solution-explorer.razor",
-					"command": "dotnet-solution-explorer.helloWorld"
+					"command": "dotnet-solution-explorer.helloWorld",
+					"group": "navigation"
 				},
 				{
 					"command": "dotnet-solution-explorer.refreshEntry",
-					"group": "navigation",
+					"group": "z_commands",
 					"when": "view == dotnetSolutionExplorer"
 				},
 				{
 					"when": "viewItem == dotnet-solution-explorer.directory",
-					"command": "dotnet-solution-explorer.addFile"
+					"command": "dotnet-solution-explorer.addFile",
+					"group": "navigation"
 				},
 				{
 					"when": "viewItem == dotnet-solution-explorer.directory",
-					"command": "dotnet-solution-explorer.addBlazorComponent"
+					"command": "dotnet-solution-explorer.addBlazorComponent",
+					"group": "navigation"
 				}
 			],
 			"explorer/context": [
