--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "dotnet-solution-explorer",
 	"displayName": "dotnet Solution Explorer",
+	"publisher": "hunter",
 	"description": "",
 	"version": "0.0.1",
 	"engines": {
