--- a/package.json
+++ b/package.json
@@ -137,5 +137,8 @@
 		"mocha": "^8.2.1",
 		"typescript": "^4.1.3",
 		"vscode-test": "^1.5.0"
+	},
+	"dependencies": {
+		"uuidv4": "^6.2.7"
 	}
 }
