--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
 				"title": "New Project"
 			},
 			{
+				"command": "dotnet-solution-explorer.addExistingProject",
+				"title": "Add Existing Project"
+			},
+			{
 				"command": "dotnet-solution-explorer.openFile",
 				"title": "Open File"
 			},
@@ -145,6 +149,11 @@
 				{
 					"when": "viewItem == dotnet-solution-explorer.solution",
 					"command": "dotnet-solution-explorer.newProject",
+					"group": "navigation"
+				},
+				{
+					"when": "viewItem == dotnet-solution-explorer.solution",
+					"command": "dotnet-solution-explorer.addExistingProject",
 					"group": "navigation"
 				}
 			],
