--- a/package.json
+++ b/package.json
@@ -121,22 +121,22 @@
 					"group": "navigation"
 				},
 				{
-					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list",
+					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package && viewItem != dotnet-solution-explorer.nuget-package-version",
 					"command": "dotnet-solution-explorer.copy",
 					"group": "9_cutcopypaste"
 				},
 				{
-					"when": "viewItem == dotnet-solution-explorer.directory || viewItem == dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list",
+					"when": "viewItem == dotnet-solution-explorer.directory || viewItem == dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package&& viewItem != dotnet-solution-explorer.nuget-package-version",
 					"command": "dotnet-solution-explorer.paste",
 					"group": "9_cutcopypaste"
 				},
 				{
-					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list",
+					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package&& viewItem != dotnet-solution-explorer.nuget-package-version",
 					"command": "dotnet-solution-explorer.cut",
 					"group": "9_cutcopypaste"
 				},
 				{
-					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.directory && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list",
+					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.directory && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package&& viewItem != dotnet-solution-explorer.nuget-package-version",
 					"command": "dotnet-solution-explorer.deleteFile",
 					"group": "9_cutcopypaste"
 				},
