--- a/package.json
+++ b/package.json
@@ -164,6 +164,11 @@
 					"when": "viewItem == dotnet-solution-explorer.solution",
 					"command": "dotnet-solution-explorer.addExistingProject",
 					"group": "navigation"
+				},
+				{
+					"when": "viewItem == dotnet-solution-explorer.project-nuget-package-list",
+					"command": "dotnet-solution-explorer.addNugetPackage",
+					"group": "navigation"
 				}
 			],
 			"explorer/context": [
