--- a/package.json
+++ b/package.json
@@ -121,22 +121,22 @@
 					"group": "navigation"
 				},
 				{
-					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package && viewItem != dotnet-solution-explorer.nuget-package-version",
+					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package && viewItem != dotnet-solution-explorer.nuget-package-version && viewItem != dotnet-solution-explorer.project-nuget-package-list  && viewItem != dotnet-solution-explorer.project-dependencies",
 					"command": "dotnet-solution-explorer.copy",
 					"group": "9_cutcopypaste"
 				},
 				{
-					"when": "viewItem == dotnet-solution-explorer.directory || viewItem == dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package&& viewItem != dotnet-solution-explorer.nuget-package-version",
+					"when": "viewItem == dotnet-solution-explorer.directory || viewItem == dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package&& viewItem != dotnet-solution-explorer.nuget-package-version && viewItem != dotnet-solution-explorer.project-nuget-package-list  && viewItem != dotnet-solution-explorer.project-dependencies",
 					"command": "dotnet-solution-explorer.paste",
 					"group": "9_cutcopypaste"
 				},
 				{
-					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package&& viewItem != dotnet-solution-explorer.nuget-package-version",
+					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package&& viewItem != dotnet-solution-explorer.nuget-package-version && viewItem != dotnet-solution-explorer.project-nuget-package-list  && viewItem != dotnet-solution-explorer.project-dependencies",
 					"command": "dotnet-solution-explorer.cut",
 					"group": "9_cutcopypaste"
 				},
 				{
-					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.directory && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package&& viewItem != dotnet-solution-explorer.nuget-package-version",
+					"when": "viewItem != dotnet-solution-explorer.solution && viewItem != dotnet-solution-explorer.project && viewItem != dotnet-solution-explorer.directory && viewItem != dotnet-solution-explorer.project-reference && viewItem != dotnet-solution-explorer.project-reference-list && viewItem != dotnet-solution-explorer.nuget-package&& viewItem != dotnet-solution-explorer.nuget-package-version && viewItem != dotnet-solution-explorer.project-nuget-package-list  && viewItem != dotnet-solution-explorer.project-dependencies",
 					"command": "dotnet-solution-explorer.deleteFile",
 					"group": "9_cutcopypaste"
 				},
@@ -163,11 +163,6 @@
 				{
 					"when": "viewItem == dotnet-solution-explorer.solution",
 					"command": "dotnet-solution-explorer.addExistingProject",
-					"group": "navigation"
-				},
-				{
-					"when": "viewItem == dotnet-solution-explorer.project-nuget-package-list",
-					"command": "dotnet-solution-explorer.addNugetPackage",
 					"group": "navigation"
 				}
 			],
