--- a/package.json
+++ b/package.json
@@ -91,6 +91,10 @@
 			{
 				"command": "dotnet-solution-explorer.removeProjectReference",
 				"title": "Remove Project Reference"
+			},
+			{
+				"command": "dotnet-solution-explorer.addNugetPackage",
+				"title": "Add Nuget Package"
 			}
 		],
 		"menus": {
@@ -163,6 +167,11 @@
 				{
 					"when": "viewItem == dotnet-solution-explorer.solution",
 					"command": "dotnet-solution-explorer.addExistingProject",
+					"group": "navigation"
+				},
+				{
+					"when": "viewItem == dotnet-solution-explorer.project-nuget-package-list",
+					"command": "dotnet-solution-explorer.addNugetPackage",
 					"group": "navigation"
 				}
 			],
