--- a/package.json
+++ b/package.json
@@ -11,30 +11,35 @@
 		"Other"
 	],
 	"activationEvents": [
+		"onView:dotnetSolutionExplorer",
 		"onView:dotnet-solution-explorer.webview"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"viewsContainers": {
 			"activitybar": [
-			  {
-				"id": "dotnet-solution-explorer",
-				"title": ".NET Solution Explorer",
-				"icon": "media/dotNetSolutionExplorerIcon.svg"
-			  }
+				{
+					"id": "dotnet-solution-explorer",
+					"title": ".NET Solution Explorer",
+					"icon": "media/dotNetSolutionExplorerIcon.svg"
+				}
 			]
-		  },
-		  "views": {
+		},
+		"views": {
 			"dotnet-solution-explorer": [
-			  {
-				"type": "webview",
-				"id": "dotnet-solution-explorer.webview",
-				"name": ".NET Solution Explorer",
-				"icon": "media/dotNetSolutionExplorerIcon.svg",
-				"contextualTitle": ".NET Solution Explorer"
-			  }
+				{
+					"type": "webview",
+					"id": "dotnet-solution-explorer.webview",
+					"name": "Nuget Package Manager",
+					"icon": "media/dotNetSolutionExplorerIcon.svg",
+					"contextualTitle": ".NET Solution Explorer"
+				},
+				{
+					"id": "dotnetSolutionExplorer",
+					"name": ".NET Solution Explorer"
+				}
 			]
-		  },
+		},
 		"commands": [
 			{
 				"command": "dotnet-solution-explorer.refreshEntry",
@@ -204,6 +209,20 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
+		"@rollup/plugin-commonjs": "^17.0.0",
+		"@rollup/plugin-node-resolve": "^11.0.1",
+		"@rollup/plugin-typescript": "^8.1.0",
+		"@tsconfig/svelte": "^1.0.10",
+		"@types/polka": "^0.5.1",
+		"concurrently": "^5.3.0",
+		"rollup": "^2.3.4",
+		"rollup-plugin-svelte": "^6.0.0",
+		"rollup-plugin-terser": "^7.0.2",
+		"svelte": "^3.31.0",
+		"svelte-check": "^1.1.23",
+		"svelte-preprocess": "^4.6.1",
+		"ts-loader": "^8.0.11",
+		"typescript": "^4.1.2",
 		"@types/vscode": "^1.55.0",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
@@ -213,19 +232,13 @@
 		"@typescript-eslint/parser": "^4.14.1",
 		"glob": "^7.1.6",
 		"mocha": "^8.2.1",
-		"typescript": "^4.1.3",
 		"vscode-test": "^1.5.0",
-		"@rollup/plugin-commonjs": "^17.0.0",
-		"@rollup/plugin-node-resolve": "^11.0.0",
-		"rollup": "^2.3.4",
 		"rollup-plugin-css-only": "^3.1.0",
-		"rollup-plugin-livereload": "^2.0.0",
-		"rollup-plugin-svelte": "^7.0.0",
-		"rollup-plugin-terser": "^7.0.0",
-		"svelte": "^3.0.0"
+		"rollup-plugin-livereload": "^2.0.0"
 	},
 	"dependencies": {
-		"uuidv4": "^6.2.7",
-		"sirv-cli": "^2.0.0"
+		"@rollup/plugin-typescript": "^8.3.2",
+		"sirv-cli": "^2.0.0",
+		"uuidv4": "^6.2.7"
 	}
 }
