--- a/webviews/tsconfig.json
+++ b/webviews/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "extends": "../tsconfig.json",
-    "include": ["./**/*", ],
+    "include": ["./**/*", "../src/Models/NugetPackageModel.ts", ],
     "exclude": ["../node_modules/*"],
     "compilerOptions": {"strict": true, }
   }
